# ledstripesp32

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  config.example.json  platformio.ini  sdkconfig  sdkconfig.azdelivery  sdkconfig.defaults  sdkconfig.esp32  sdkconfig.esp32c6  sdkconfig.featheresp32
catch2_tests/: CMakeLists.txt  colours.cpp
components/esp32_addressable/: CMakeLists.txt
components/ssd1306/: CMakeLists.txt
include/: Light.hpp  SSD1306.hpp  config.example.h  config.hpp  main.hpp  mqtt.hpp  tasks.h
lib/esp32_addressable/: LICENSE  README.md  led_strip.c
lib/esp32_addressable/inc/: led_strip.h
lib/ssd1306/src/: OLEDDisplay.cpp  OLEDDisplay.h  OLEDDisplayFonts.h  OLEDDisplayUi.cpp  OLEDDisplayUi.h
main/: CMakeLists.txt  Kconfig.projbuild  Light.cpp  config.cpp  main.c  main.cpp  mqtt.cpp  tasks.cpp  wifi.cpp
src/: Light.cpp  main.c
utils/: config.cpp
